Improve mobile version styling to stick to the given template

--- a/about.html
+++ b/about.html
@@ -72,10 +72,8 @@
                 
             </div>
          </section>
-         <footer>
-            <div class="logo_container">     
-                <img  src="./media/images/my_logo (1)/my_logo.svg" alt="logo">
-             </div>
+         <footer>    
+                <img class="footer_logo" src="./media/images/my_logo (1)/my_logo.svg" alt="logo">
              <p>web dev 2022 course some rights reserved</p>
          </footer>
         <script src="" async defer></script>
