--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
                  <i class="fas fa-angle-down"></i>
             </div>
         </section>
-        <script src="" async defer></script>
+        <script src="./scripts.js" async defer></script>
     </body>
 </html>
