Add more and less  speakers dynamicaly

--- a/index.html
+++ b/index.html
@@ -77,18 +77,15 @@
         <section class="speakers_section">
             <h3 class="speakers_section_title">Featured Speakers</h3>
             <hr/>
-            <div class="speaker_card">
-                <div class="speaker_img"><img src="./media/images/speakers/image-1.png" alt=""></div>
-                <div class="speaker_info">
-                    <p class="speaker_name">Souad El Mansouri</p>
-                    <p class="speaker_profession">Full stack developer at microverse inc</p>
-                    <hr/>
-                    <p class="speaker_desc">Mark Elliot Zuckerberg is an American media magnate, internet entrepreneur, and philanthropist and Facebook, Inc co-founder.</p>
-                </div>
-            </div>
+            <div  class="speaker_card_list">
+            
+           </div>
+           <div  class="speaker_card_list1">
+            
+        </div>  
             <div class="speakers_more">
                   MORE
-                 <i class="fas fa-angle-down"></i>
+                 <i class="fas fa-angle-down" ></i>
             </div>
         </section>
         <script src="./scripts.js" async defer></script>
