--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>web dev 2022</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./main.css">
@@ -39,7 +39,7 @@
             <div class="main_program_title_underline"></div>
             <p>the logo of web dev 2022 course was decided through the logo competition from 7th to 8th.may</p>
             <div class="logo_container">     
-               <img  src="./media/images/my_logo (1)/my_logo.svg" alt="logo">
+               <img  src="./media/images/logo/my_logo.svg" alt="logo">
             </div>
         </section>
         <section class="speakers_section past_courses">
@@ -73,9 +73,8 @@
             </div>
          </section>
          <footer>    
-                <img class="footer_logo" src="./media/images/my_logo (1)/my_logo.svg" alt="logo">
+                <img class="footer_logo" src="./media/images/logo/my_logo.svg" alt="logo">
              <p>web dev 2022 course some rights reserved</p>
          </footer>
-        <script src="" async defer></script>
     </body>
 </html>
