Add interaction to mobile menu icon

--- a/about.html
+++ b/about.html
@@ -20,7 +20,14 @@
         <![endif]-->
         <section class="header_headlines_section about">
             <header> 
-                <span class="menu_icon">&#9776;</span>
+                <i class="fas fa-bars fa-3x menu_icon_about"></i>
+                <div class="menu_list_container_about">
+                <ul class="nav-links" id="humberger_menu_list">
+                  <li class="nav-link"><a href="./index.html">Home</a></li>
+                  <li class="nav-link"><a href="#editions">editions</a></li>
+                  <li class="nav-link"><a href="#partners">Partners</a></li>
+                </ul>
+              </div>
             </header>
             <p class="lower_headline">"Hello! technology world"</p>
             <h1 class="upper_headline">WEB DEV COURSE 2022</h1>
@@ -42,7 +49,7 @@
                <img  src="./media/images/logo/my_logo.svg" alt="logo">
             </div>
         </section>
-        <section class="speakers_section past_courses">
+        <section class="speakers_section past_courses" id="editions">
             <h3 class="speakers_section_title">Past Cources</h3>
             <hr/>
               <div class="past_course_card">
@@ -59,7 +66,7 @@
                  </div>
                 </div>
          </section>
-         <section class="main_program partners">
+         <section class="main_program partners" id="partners">
             <h3 class="main_program_title">Partners</h3>
             <div class="main_program_title_underline"></div> 
             <div class="partners_icons"> 
@@ -76,5 +83,6 @@
                 <img class="footer_logo" src="./media/images/logo/my_logo.svg" alt="logo">
              <p>web dev 2022 course some rights reserved</p>
          </footer>
+         <script src="./about.js"></script>
     </body>
 </html>
