Create desktop header section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,28 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <section class="header_headlines_section">
-            <header class="desktop_header"></header>
+            <header class="desktop_header">
+                <nav class="top_nav">
+                    <ul class="top_nav_ul">
+                        <li class="top_nav_li"><i class="fab fa-facebook-f"></i></li>
+                        <li class="top_nav_li"><i class="fab fa-twitter"></i></li>
+                        <li class="top_nav_li">english</li>
+                        <li class="top_nav_li">My Page</li>
+                        <li class="top_nav_li">logout</li>
+                    </ul>
+                </nav>
+                <nav class="menu_nav">
+                    <img class="desktop_menu_logo" src="./media/images/logo/my_logo.svg" alt="">
+                    <ul class="menu_nav_ul">
+                        <li>About</li>
+                        <li>Program</li>
+                        <li>Join</li>
+                        <li>Sponsor</li>
+                        <li>News</li>
+                        <li > <div class="cc"> CC Compaign</div></li>
+                    </ul>
+                </nav>
+            </header>
             <header class="mobile_header"> 
                 <i class="fas fa-bars fa-3x menu_icon"></i>
                 <div class="menu_list_container">
