Fix speakers styling for desktop and Add partners to home desktop

--- a/about.html
+++ b/about.html
@@ -66,9 +66,9 @@
                  </div>
                 </div>
          </section>
-         <section class="main_program partners" id="partners">
-            <h3 class="main_program_title">Partners</h3>
-            <div class="main_program_title_underline"></div> 
+         <section class="about_partners" id="about_partners">
+            <h3 class="partners_title">Partners</h3>
+            <hr/> 
             <div class="partners_icons"> 
                 <!---->
                 <div class="partners_icon"><i class="fab fa-facebook-square"></i>acebook</div>
@@ -79,7 +79,7 @@
                 
             </div>
          </section>
-         <footer>    
+         <footer id="about_footer">    
                 <img class="footer_logo" src="./media/images/logo/my_logo.svg" alt="logo">
              <p>web dev 2022 course some rights reserved</p>
          </footer>
