--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./main.css">
-        <link rel="stylesheet" media="screen and (min-width:790px)" href="./desktop.css"/>
+        <link rel="stylesheet" media="screen and (min-width:768px)" href="./desktop.css"/>
         <script src="https://kit.fontawesome.com/58aa8d2b83.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -119,6 +119,25 @@
                  <i class="fas fa-angle-down" ></i>
             </div>
         </section>
+
+        <!--desktop only on desktop-->
+        <section class="home_partners" id="home_partners">
+            <h3 class="partners_title">Partners</h3>
+            <hr/>
+            <div class="partners_icons"> 
+                
+                <div class="partners_icon"><i class="fab fa-facebook-square"></i>acebook</div>
+                <div class="partners_icon"><i class="fab fa-google"></i>oogle</div>
+                <div class="partners_icon"><i class="fab fa-uber"></i>Uber</div>
+                <div class="partners_icon"><i class="fab fa-amazon"></i>mazone</div>
+                <div class="partners_icon">Oracle</div>
+                
+            </div>
+         </section>
+         <footer id="home_footer">    
+                <img class="footer_logo" src="./media/images/logo/my_logo.svg" alt="logo">
+             <p>web dev 2022 course some rights reserved</p>
+         </footer>
         <script src="./scripts.js" async defer></script>
     </body>
 </html>
