Add desktop responsiveness to  main program section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </ul>
               </div>
             </header>
-            
+            <div class="headlines">
             <p class="lower_headline">"Hello! technology world"</p>
             <h1 class="upper_headline">WEB DEV COURSE 2022</h1>
             <div class="header_headlines_description">
@@ -64,10 +64,12 @@
             <p class="course-address">
                 @ youtube channel souad's space
             </p>
+           </div>
         </section>
         <section class="main_program" id="program">
             <h3 class="main_program_title">Main Program</h3>
             <div class="main_program_title_underline"></div>
+            <div class="main_program_cards">
             <div class="main_program_card">
                 <i class="fas fa-handshake fa-2x"></i>
                 <strong>Network</strong>
@@ -103,7 +105,9 @@
                     Network and interact with top industry individuals with many years of experience.
             </p>
             </div>
-            <div class="main_program_button">Join the Course</div>
+        </div>
+        <a class="desktop_see_program" href="#">See the hall Program</a>    
+        <div class="main_program_button">Join the Course</div>
         </section>
         <section class="speakers_section" id="speakers">
             <h3 class="speakers_section_title">Featured Speakers</h3>
