--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     </ul>
                 </nav>
                 <nav class="menu_nav">
-                    <img class="desktop_menu_logo" src="./media/images/logo/my_logo.svg" alt="">
+                    <a href="./index.html"><img class="desktop_menu_logo" src="./media/images/logo/my_logo.svg" alt=""></a>
                     <ul class="menu_nav_ul">
-                        <li>About</li>
-                        <li>Program</li>
-                        <li>Join</li>
-                        <li>Sponsor</li>
-                        <li>News</li>
-                        <li > <div class="cc"> CC Compaign</div></li>
+                        <a href="./about.html"><li style="color: tomato;">About</li></a>
+                        <a href="#"><li>Program</li></a>
+                        <a href="#"><li>Join</li></a>
+                        <a href="#"><li>Sponsor</li></a>
+                        <a href="#"><li>News</li></a>
+                        <a href="#"><li > <div class="cc"> CC Compaign</div></li></a>
                     </ul>
                 </nav>
             </header>
