Fix style and es linter errors

--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
                 <nav class="menu_nav">
                     <a href="./index.html"><img class="desktop_menu_logo" src="./media/images/logo/my_logo.svg" alt=""></a>
                     <ul class="menu_nav_ul">
-                        <a href="./about.html"><li>About</li></a>
-                        <a href="#program"><li>Program</li></a>
-                        <a href="#about_footer"><li>Join</li></a>
-                        <a href="#about_footer"><li>Sponsor</li></a>
-                        <a href="#about_footer"><li>News</li></a>
-                        <a href="#about_footer"><li > <div class="cc"> CC Compaign</div></li></a>
+                        <li class="first_nav_child"><a href="./about.html">About</a></li>
+                        <li><a href="#program">Program</a></li>
+                        <li><a href="#about_footer">Join</a></li>
+                        <li><a href="#about_footer">Sponsor</a></li>
+                        <li><a href="#about_footer">News</a></li>
+                        <li><a href="#about_footer"> <div class="cc"> CC Compaign</div></a></li>
                     </ul>
                 </nav>
             </header>
