--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 <nav class="menu_nav">
                     <a href="./index.html"><img class="desktop_menu_logo" src="./media/images/logo/my_logo.svg" alt=""></a>
                     <ul class="menu_nav_ul">
-                        <a href="./about.html"><li style="color: tomato;">About</li></a>
-                        <a href="#"><li>Program</li></a>
-                        <a href="#"><li>Join</li></a>
-                        <a href="#"><li>Sponsor</li></a>
-                        <a href="#"><li>News</li></a>
-                        <a href="#"><li > <div class="cc"> CC Compaign</div></li></a>
+                        <li class="first_nav_child"><a href="./about.html">About</a></li>
+                        <li><a href="#">Program</a></li>
+                        <li><a href="#">Join</a></li>
+                        <li><a href="#">Sponsor</a></li>
+                        <li><a href="#">News</a></li>
+                        <li ><a href="#"> <div class="cc"> CC Compaign</div></a></li>
                     </ul>
                 </nav>
             </header>
