--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <link rel="stylesheet" href="./main.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" href="./desktop.css"/>
         <script src="https://kit.fontawesome.com/58aa8d2b83.js" crossorigin="anonymous"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GB54EPJXXN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){window.dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GB54EPJXXN');
+</script>
     </head>
     <body>
         <!--[if lt IE 7]>
