Add meta tag image url

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta property="og:image" content="./media/images/home_screenshot.PNG" >
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>web dev 2022</title>
         <meta name="description" content="">
