--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta property="og:image" content="./media/images/home_screenshot.PNG" >
+        <meta property="og:image" content="https://user-images.githubusercontent.com/59707859/163657286-0844c43f-8c03-4056-a1b0-23f39e33348a.png" >
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>web dev 2022</title>
         <meta name="description" content="">
